--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1>Job Search Project</h1>
   <p>This site is used for experimenting with job search APIs.</p>
+  <p>Contact: arek.baranowski@outlook.com</p>
 </body>
 </html>
